--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>YG ENTERTAINMENT</title>
 
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
 
     <script src="js/jquery-1.12.3.js"></script>
-    <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
 </head>
 <body onselectstart="return false" ondragstart="return false">
